# glqp

./: .gitignore  demo.ipynb  glopt.py  glopt_prototype.ipynb  obj.py  problems.py  pyproject.toml  readme.md  solve_eq.ipynb  util.py
glqp/: __init__.py  example_problems.py  obj.py  solver.py  util.py
glqp_tests/: build_problems.py  glqp_mm_results.csv  run_lgt_problems.py  run_mm_problems.py  test_tools.py
notebooks/: code_stash.py  compare_to_linesearch.ipynb  demo.ipynb  dev_linesearch.ipynb  dev_linesearch_initial.ipynb  glopt_prototype_2.ipynb  glopt_prototype_3_infeas.ipynb  glopt_prototype_4_infeas.ipynb  glopt_scratch_v0.ipynb  glopt_scratch_v1.ipynb  mini_performance_test.ipynb  prob_setup.ipynb  prototype_infeas_linesearch.ipynb  test_cvxpy.ipynb  util.py
src/: __init__.py  example_problems.py  glqp.py  obj.py
src/glqp/: __init__.py  util.py
